Minor changes to contact links, adding pics

--- a/aboutme.html
+++ b/aboutme.html
@@ -3,7 +3,7 @@
   <head>
     <title>About me</title>
 
-    <link href='https://fonts.googleapis.com/css2?family=Eagle+Lake&family=Hina+Mincho&family=Aboreto' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css2?family=Eagle+Lake&family=Hina+Mincho' rel='stylesheet'>
 
     <link href="style.css" rel="stylesheet">
   </head>
@@ -12,13 +12,15 @@
   <p id="page-title"> About me </p>
 
   <!-- DAD: CHANGE ABOUT ME BIO HERE -->
+  <p class="para">I'm a woodworker, bass player, and real estate agent based in The Gorge.</p>
   <p class="para">I guess I started doing woodwork with my dad, and have been at it one way or another since then. For a while after Vietnam I was actually a licensed contractor in California for cabinet and millwork. Artistically, however, it has just been the last 20-25 years. Dressers, tables, cabinets, and such, and for the last 15 years my focus has been making bowls on the lathe. I begin with fresh wood that gets cut down right here in the Gorge.
   </p>
+  <a class="menu-link" href="contact.html">Contact me to see about custom woodworking!</a>
 
   <div class="gallery">
     <div class="gallery-item">
-      <img class="gallery-img" src="assets/the_rez.jpg">
-      <p>Playing with my band The Ressurectorz</p>
+      <img class="gallery-img" src="assets/the_rez_2.jpg">
+      <p>Playing with my band The Rezurectors</p>
     </div>
     <div class="gallery-item">
       <img class="gallery-img" src="assets/ski_suit.jpg">
@@ -27,11 +29,9 @@
 
     <div class="gallery-item">
       <img class="gallery-img" src="assets/waterskiing.jpg">
-      <p>I also like to ski in the summer</p>
+      <p>Enjoying the Gorge while waterskiing</p>
     </div>
   </div>
-
-  <a class="menu-link" href="contact.html">Contact me to see about custom woodworking!</a>
   
   <!-- Link back to main page -->
   <p></p>
