--- a/contact.html
+++ b/contact.html
@@ -23,17 +23,24 @@
 
   <!-- <p>Follow my Facebook or Instagram or check out my real estate website with Copper West:</p> -->
 
-  <a href="https://www.facebook.com/paulthompson999" class="image-link">
-    <img src="assets/facebook_logo.png" alt="Image 1">
+  <a href="https://www.facebook.com/paulthompson999" target="_blank" class="image-link">
+    <img src="assets/facebook_logo.png" alt="facebook logo">
   </a>
 
-  <a href="https://www.instagram.com/shoebitch9/" class="image-link">
-    <img src="assets/insta_logo.png" alt="Image 2">
+  <a href="https://www.instagram.com/shoebitch9/" target="_blank" class="image-link">
+    <img src="assets/insta_logo.png" alt="insta logo">
   </a>
 
-  <a href="https://www.copperwest.com/paul-thompson__trashed/" class="image-link">
-    <img src="assets/copper_west_logo.jpg" alt="Image 3">
+  <a href="https://www.copperwest.com/paul-thompson__trashed/" target="_blank" class="image-link">
+    <img src="assets/copper_west_logo.jpg" alt="Copper West Logo">
   </a>
+
+  <p>I'm part of the 2024 Gorge Artists Studios Tour, learn more about that here:</p>
+
+  <a href="https://www.gorgeartists.org/" target="_blank" class="ga-link">
+    <img src="assets/gorge_artists_logo.jpg" alt="GA logo">
+  </a>
+  <p></p>
 
   <!-- Link back to main page -->
   <p></p>
