--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <!-- Title -->
     <div class="header-div">
       <p id="page-title">Paul Thompson Woodworking</p>
+      <!-- <p class="para">Woodworker based in The Gorge</p> -->
 
       <!-- Menu of links -->
       <div class="menu">
@@ -34,6 +35,10 @@
     <div class="gallery">
       <div class="gallery-item">
         <img class="gallery-img" src="assets/Walnut_bowl_1.jpg" alt="Picture of bowl">
+      </div>
+
+      <div class="gallery-item">
+        <img class="gallery-img" src="assets/Sapele_bass.jpg" alt="Picture of bowl">
       </div>
 
       <div class="gallery-item">
