--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>The Woodworking Druid Bass Player</title>
+    <title>Paul Thompson Woodworking</title>
 
     <!-- Font is free to use from google fonts -->
     <link href='https://fonts.googleapis.com/css2?family=Eagle+Lake&family=Hina+Mincho' rel='stylesheet'>
