--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
     <img src="assets/insta_logo.png" alt="insta logo">
   </a>
 
-  <a href="https://www.copperwest.com/paul-thompson__trashed/" target="_blank" class="image-link">
+  <a href="https://www.copperwest.com/paul-thompson" target="_blank" class="image-link">
     <img src="assets/copper_west_logo.jpg" alt="Copper West Logo">
   </a>
 
